<resources>
    <string name="app_name">OClock</string>
    <string name="terms_conditions">이용 약관 및 방침</string>
    <string name="do_sign_up">회원가입하기</string>
    <string name="sign_up">회원가입</string>
    <string name="do_login">로그인하기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="email_or_password_do_not_match">이메일 혹은 비밀번호가 일치하지 않아요</string>
    <string name="please_enter_password">비밀번호를 입력해주세요</string>
    <string name="please_enter_email">이메일을 입력해주세요</string>
    <string name="next">다음</string>
    <string name="sign_up_enter_email">사용하실 이메일을 입력해주세요</string>
    <string name="sign_up_enter_verify_code">인증번호를 입력해주세요</string>
    <string name="error_email_format">올바른 이메일 형식을 입력해주세요</string>
    <string name="error_unavailable_email">사용 할 수 없는 이메일이에요</string>
    <string name="error_verify_code">인증번호가 일치하지 않아요</string>
    <string name="verify">인증</string>
    <string name="retry_verify">재인증</string>
    <string name="verify_char">인증번호 6자</string>
    <string name="example_email">0clock@clock.com</string>
    <string name="include_alphabet_number_8char">영문, 숫자 포함 8자 이상</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="error_password_format_1">8자 이상 20자 이하를 입력해주세요</string>
    <string name="error_password_format_2">숫자를 포함해주세요</string>
    <string name="error_password_format_3">영문을 포함해주세요</string>
    <string name="error_password_confirm_format">비밀번호가 일치하지 않아요</string>
    <string name="sign_up_std_card_description">대학생을 위한 서비스인만큼 대학생 인증이 필요해요\n학생증에는 이름, 대학교명, 전공, 학번이 포함되어야 해요\n실물 학생증 사진 혹은 모바일 학생증 스크린샷을 제출해주세요</string>
    <string name="please_upload_std_card">학생증 사진을 첨부해주세요</string>
    <string name="upload_std_card">학생증 이미지 업로드</string>
    <string name="complete">완료</string>
    <string name="retry_verify_std_card">학생증 다시 인증하기</string>
    <string name="please_wait">잠시만 기다려주세요</string>만
    <string name="please_re_certify">다시 한번 인증해주세요</string>
    <string name="choose_image">이미지 선택</string>
    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="unknown_error">알 수 없는 오류가 발생하였습니다.</string>
    <string name="pending_description_pending">개발자 승인 이후 회원가입이 완료돼요!\n올바른 형식의 학생증 사진이 아니거나 알아보기 어려운 경우 승인이 거부될 수 있어요.\n승인 여부는 알림으로 안내해 드릴게요.</string>
    <string name="pending_description_reject">학생증 사진을 다시 첨부해주세요.\n필요한 정보가 잘 보이게 학생증 사진을 찍어주세요.\n회원 가입 시 입력한 데이터는 30일만 보존됩니다.</string>
    <string name="pending_description_approve">그동안 전공 관련 이야기 털어놓을 곳이 없어서 힘들었죠?\n같은 전공생과 이야기를 나눠볼까요?</string>
    <string name="sign_up_nickname_description">민감한 개인정보 또는 홍보목적이나 부적절한 키워드는 관리자에 의해 예고없이 이용정지 될 수 있어요.\n한글 10글자로 본인을 개성있게 표현해보세요!</string>
    <string name="sign_up_please_enter_nickname">사용하실 닉네임을 입력해주세요</string>
    <string name="within_10characters_korean">한글/영어 10자 이내</string>
    <string name="error_nickname_format1">10자 이내로 입력해주세요</string>
    <string name="error_nickname_format2">숫자가 포함되어 있어요</string>
    <string name="error_nickname_format3">특수문자가 포함되어 있어요</string>
    <string name="error_nickname_format4">이미 사용 중인 닉네임이에요</string>
    <string name="sign_up_major_description">복수전공을 대비해 사용자에게 전공 선택을 맡기고 있어요.\n의도적으로 다른 전공을 선택하여 상대방의 불편을 초래한 경우\n관리자에 의해 예고없이 이용정지 될 수 있어요.</string>
    <string name="please_select_major">전공을 선택해주세요</string>
    <string name="hint_select_major">전공 선택하기</string>
    <string name="sign_up_time_description">선호하는 채팅 시간은 2시간 단위에요.\n시간대가 겹치는 상대방과 매칭이 되기 때문에 실제 채팅 시간은 설정 시간과 다를 수 있어요.</string>
    <string name="please_select_preferred_time">선호하는 채팅 시간을 설정해주세요</string>
    <string name="please_select_partner_sex">매칭을 원하는 성별을 선택해주세요</string>
    <string name="please_select_my_sex">자신의 성별을 선택해주세요</string>
    <string name="hint_select_partner_sex">성별선택</string>
    <string name="hint_select_time">시간선택</string>
    <string name="welcome">%s님 환영해요!</string>
    <string name="start">시작하기</string>
    <string name="on_boarding_description1">같은 전공생과 1:1 대화로\n전공에 대한 고민 같이 나누고\n새로운 친구를 만들어봐요!</string>
    <string name="on_boarding_description2">10시부터 3시 중\n나와 시간이 맞는 사람과\n하루 한 시간 대화할 수 있어요</string>
    <string name="on_boarding_description3">상대방과 계속 채팅을 하고 싶다면\n둘만의 시간 약속을 잡아봐요</string>
    <string name="please_enter_new_password">새 비밀번호를 입력해주세요</string>
    <string name="sign_up_terms_description">오클락에 오신 것을 환영합니다.\n오클락 서비스 이용시 아래의 약관 동의 및 개인정보 처리 방침에 대한 동의와 회원가입이 필요해요</string>
    <string name="terms_agreement">약관동의</string>
    <string name="terms_all_agreement">약관 전체동의</string>
    <string name="required_terms_agreement"><font fgcolor='#FF8782EA'>(필수)</font> 이용약관 동의</string>
    <string name="required_personal_info_agreement"><font fgcolor='#FF8782EA'>(필수)</font> 개인정보 처리 방침 동의</string>
    <string name="required_re_verify">인증시간이 만료되었습니다. 다시 인증해주세요.</string>
    <string name="forced_logout">로그인이 만료되었습니다. 로그인 화면으로 이동합니다.</string>
    <string name="home_description_waiting">다음 상대방을 기다리는 중이에요!\n매칭 완료 후 알림으로 안내해 드릴게요.</string>
    <string name="matching_success">매칭이 완료되었어요!\n정해진 시간에 채팅방이 열려요.</string>
    <string name="matching_fail">매칭 상대가 아직 없어요.\n매칭이 완료될 때 까지 기다려주세요!</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="setting">설정</string>
    <string name="room_exit_description">현재 대화하는 분과 잘 안 맞나요?</string>
    <string name="room_exit">채팅방 나가기</string>
    <string name="make_time_appointment">시간 약속 잡기</string>
    <string name="waiting_chat_description">정해진 시간에 채팅방이 열려요 잠시만 기다려주세요</string>
    <string name="no_chat_time">채팅이 불가한 시간대에요</string>
    <string name="send_message">메세지 보내기</string>
    <string name="accept">수락</string>
    <string name="reject">거절</string>
    <string name="save_edited_data">변경 사항 저장하기</string>
    <string name="nickname">닉네임</string>
    <string name="chattime">채팅 시간</string>
    <string name="matching_sex">매칭 성별</string>

</resources>