<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_viewpager_password"
        style="@style/OutlinedLoginInputTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/include_alphabet_number_8char"
        app:boxCornerRadiusBottomEnd="18dp"
        app:boxCornerRadiusBottomStart="18dp"
        app:boxCornerRadiusTopEnd="18dp"
        app:boxCornerRadiusTopStart="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="password_toggle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white_gray"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sign_up_viewpager_password_error_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/error_email_format"
        android:textColor="@color/error"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_viewpager_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_viewpager_password_confirm"
        style="@style/OutlinedLoginInputTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/password_confirm"
        app:boxCornerRadiusBottomEnd="18dp"
        app:boxCornerRadiusBottomStart="18dp"
        app:boxCornerRadiusTopEnd="18dp"
        app:boxCornerRadiusTopStart="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="password_toggle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white_gray"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_viewpager_password_error_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sign_up_viewpager_password_confirm_error_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/error_password_confirm_format"
        android:textColor="@color/error"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_viewpager_password_confirm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_viewpager_password_next"
        style="@style/ButtonPrimary"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/next"
        android:textSize="16sp"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>