<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/login_email"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_oclock_face_logo" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        style="@style/OutlinedLoginInputTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="18dp"
        app:boxCornerRadiusBottomStart="18dp"
        app:boxCornerRadiusTopEnd="18dp"
        app:boxCornerRadiusTopStart="18dp"
        app:layout_constraintBottom_toTopOf="@id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        style="@style/OutlinedLoginInputTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        app:boxCornerRadiusBottomEnd="18dp"
        app:boxCornerRadiusBottomStart="18dp"
        app:boxCornerRadiusTopEnd="18dp"
        app:boxCornerRadiusTopStart="18dp"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_error_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/email_or_password_do_not_match"
        android:textColor="@color/error"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="61dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/do_login"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20.5dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/login_terms_conditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/login_do_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_sign_up"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/login_find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_password"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_conditions"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>