<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.xyz.oclock.ui.signup.nickname.SignUpNickNameViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingStart="16dp"
        android:paddingTop="48dp"
        android:paddingEnd="16dp"
        android:paddingBottom="51dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:toast="@{vm.toastMessage}">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/sign_up_nickname_description"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="24sp" />


        <LinearLayout
            android:id="@+id/sign_up_viewpager_verify_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semibold"
                android:text="@string/sign_up_please_enter_nickname"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_viewpager_verify_code_layout"
                style="@style/OutlinedLoginInputTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:boxStrokeColor= '@{vm.nicknameFormatError.equals("")? @color/purple : @color/error}'
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_viewpager_verify_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_semibold"
                    android:hint="@string/within_10characters_korean"
                    android:inputType="text"
                    android:text="@={vm.inputNickname}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/sign_up_viewpager_verify_error_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                tools:text="@string/error_nickname_format1"
                android:text="@{vm.nicknameFormatError}"
                android:textColor="@color/error"
                android:textSize="14sp"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_viewpager_email_next"
            style="@style/ButtonPrimary"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/next"
            android:textSize="16sp"
            app:cornerRadius="18dp"
            android:enabled='@{vm.nicknameFormatError.equals("")}'
            app:onThrottleClick="@{() -> vm.checkDuplicateNickname()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>